# generated/swagger.json
@@ -51,25 +51,18 @@
 						"type": "number",
 						"format": "double"
 					},
-					"dateAndTime": {
+					"date": {
 						"type": "string",
 						"format": "date-time"
 					},
-					"status": {
-						"type": "string"
-					},
-					"duration": {
+					"time": {
 						"type": "number",
 						"format": "double"
-					},
-					"deleted": {
-						"type": "boolean"
 					}
 				},
 				"required": [
-					"dateAndTime",
-					"status",
-					"deleted"
+					"date",
+					"time"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -90,55 +83,6 @@
 				"required": [
 					"key",
 					"value"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"EmployeeData": {
-				"properties": {
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"designation": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"image": {
-						"type": "string"
-					},
-					"doj": {
-						"type": "string"
-					},
-					"roles": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					},
-					"nic": {
-						"type": "string"
-					},
-					"contactNumber": {
-						"type": "string"
-					},
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"gender": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"firstName",
-					"lastName",
-					"email",
-					"gender"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -545,19 +489,13 @@
 						"type": "number",
 						"format": "double"
 					},
-					"dateAndTime": {
+					"date": {
 						"type": "string",
 						"format": "date-time"
 					},
-					"status": {
-						"type": "string"
-					},
-					"duration": {
+					"time": {
 						"type": "number",
 						"format": "double"
-					},
-					"deleted": {
-						"type": "boolean"
 					},
 					"payments": {
 						"items": {
@@ -602,10 +540,8 @@
 				},
 				"required": [
 					"id",
-					"dateAndTime",
-					"status",
-					"duration",
-					"deleted",
+					"date",
+					"time",
 					"payments",
 					"appointmentHistories",
 					"services",
@@ -1126,6 +1062,24 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/v1/admin/user": {
+			"get": {
+				"operationId": "GetAdminbyUserId",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/v1/admin/{id}": {
@@ -1820,6 +1774,25 @@
 				]
 			}
 		},
+		"/api/v1/customer/user": {
+			"get": {
+				"operationId": "GetCustomerbyUserId",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [
+					{
+						"jwt": [
+							"admin",
+							"employee"
+						]
+					}
+				],
+				"parameters": []
+			}
+		},
 		"/api/v1/employee/all": {
 			"get": {
 				"operationId": "GetAll",
@@ -1901,12 +1874,29 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/EmployeeData"
-							}
+							"schema": {}
 						}
 					}
 				}
+			}
+		},
+		"/api/v1/employee/user": {
+			"get": {
+				"operationId": "GetEmployeebyUserId",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [
+					{
+						"jwt": [
+							"admin",
+							"employee"
+						]
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/v1/employee/{id}": {
@@ -1972,9 +1962,7 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/EmployeeData"
-							}
+							"schema": {}
 						}
 					}
 				}
@@ -2785,58 +2773,6 @@
 						}
 					}
 				]
-			},
-			"patch": {
-				"operationId": "EditUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"security": [
-					{
-						"jwt": [
-							"admin",
-							"user",
-							"hr",
-							"manager"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"user": {
-										"$ref": "#/components/schemas/UserCreationParams"
-									}
-								},
-								"required": [
-									"user"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/api/v1/users/request-password-reset": {
